updated and added signup page

--- a/signup.html
+++ b/signup.html
@@ -17,9 +17,13 @@
 </header>
 
 <div class="signup-container">
-<div class="signinSignupTitle">
-        <a href="#"><h1>Sign Up</h1></a> | <a href="#"><h1>Sign In</h1></a>
-    </div>
+    <div class="signupTitle">
+        <a href="#"><h1>Sign Up</h1></a> 
+        </div> |
+    <div class="signinTitle">
+        <a href="#"><h1>Sign In</h1></a>
+        </div>
+    
 
     <div class="signup-form">
     <form action="story.html" method="GET">
