--- a/signup.html
+++ b/signup.html
@@ -7,14 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<header>
-    <div class="header-container">
-        <div class="header-title">
-           <a href="index.html"><h1>ProFuze</h1></a>
-        </div>
-        <div class="header-login"><a href="signup.html"class="fa fa-user" aria-hidden="true"></a></div>
-    </div>
-</header>
+<page-header></page-header>
 
 <div class="signup-container">
     <div class="signupTitle">
@@ -26,7 +19,7 @@
     
 
     <div class="signup-form">
-    <form action="story.html" method="GET">
+    <form action="#" method="GET">
             <label for="firstName">First Name:</label>
             <input id="firstName" name="firstName" type="text" required>
             <br>
@@ -53,23 +46,8 @@
 </div>
 
 
-<footer class="footer-container">
-    <div class="footer-contact">
-    <a href="#" class="footer-cats"> Contact</a></div>
-    <div class="footer-about">
-    <a href="#" class="footer-cats"> About</a></div>
-    <div class="footer-faq">
-    <a href="#" class="footer-cats"> FAQ</a></div>
-    <div class="footer-social">
-    <a href=""  class="footer-cats "> Social</a></div>
-    <div class="footer-icon1">
-    <i class="fa fa-instagram" href="#"></i></div>
-    <div class="footer-icon2">
-    <i class="fa fa-twitter" href="#"></i></div>
-    <div class="footer-icon3">
-    <i class="fa fa-facebook-f" href="#"></i></div>
-</footer>
-<script>
+<page-footer></page-footer>
+<script src="js/index.js">
 
 </script>
 </body>
