update profile page

--- a/profile.html
+++ b/profile.html
@@ -17,12 +17,28 @@
     <div class="profilePicture" id="photo"> 
         <img src='img/robert.jpg' alt="Profile Picture">
     </div>
+    <div class="cellPhone">
+       Cell:</br>
+       (313)655-4707
+    </div>
+    <div class="workPhone">
+        Work: </br>(313)655-4707
+    </div>
+    <div class="email">
+        Email: </br>robertfoleyiii@gmail.com
+    </div>
 
-
-
-
-
-
+    <div class="qr" id="Q.R. Code"> 
+        <img src='img/qr.jpg' alt="QR Code">
+    </div>
+    <div class="twitter">
+        <a href="https://twitter.com/RobertFoley_" class="profile-link" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+    <div class="instagram">
+        <a href="https://www.instagram.com/foleyautamatic/" class="profile-link" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+    <div class="linkin">       
+        <a href="https://www.linkedin.com/in/robertfoleyiii/" class="profile-link" target="_blank"><i class="fa fa-linkedin fa-beat" aria-hidden="true"></i></a></div>
+    <div class="facebook">       
+        <a href="https://www.facebook.com/robertfoleyiii/" class="profile-link" target="_blank"><i class="fa fa-facebook fa-beat" aria-hidden="true"></i></a></div>
 </div>
 </div>
 <page-footer></page-footer>
