--- a/update.html
+++ b/update.html
@@ -36,6 +36,12 @@
                 <label for="snap">Snapchat URL</label>
                 <input id="snap" name="snap" type="text" reqired>
                 <br>
+                <label for="linkedin">Linked In URL</label>
+                <input id="linkedin" name="linkedin" type="text" reqired>
+                <br>
+                <label for="twitter">Twitter URL</label>
+                <input id="twitter" name="twitter" type="text" reqired>
+                <br>
                 <div class="btnSubmit">
                 <input type="submit" value="Submit"></div>
         </form>
