--- a/signup.html
+++ b/signup.html
@@ -10,16 +10,14 @@
 <page-header></page-header>
 
 <div class="signup-container">
-    <div class="signupTitle">
-        <a href="#"><h1>Sign Up</h1></a> 
-        </div> |
-    <div class="signinTitle">
-        <a href="#"><h1>Sign In</h1></a>
+    <div class="inTitle">
+        <a href="#" id="signin"><h1>Sign In</h1></a>
         </div>
-    
-
+    <div class="upTitle">
+        <a href="#" id="signup"><h1>Sign Up</h1></a> 
+        </div>  
     <div class="signup-form">
-    <form action="#" method="GET">
+    <form action="#" method="GET" id="formSignup">
             <label for="firstName">First Name:</label>
             <input id="firstName" name="firstName" type="text" required>
             <br>
@@ -39,6 +37,18 @@
             <input type="submit" value="Submit"></div>
     </form>
     </div>
+    <div class="signin-form">
+        <form action="#" method="GET" id="formSignin">
+                
+                <label for="email1">Email:</label>
+                <input id="email1" name="email1" type="text" required>
+                <br>
+                <label for="password1">Password:</label>
+                <input id="password1" type="password" name="password1" required>
+                <div class="btnSubmit">
+                <input type="submit" value="Submit"></div>
+        </form>
+        </div>
 
 
 
