--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="qr" id="Q.R. Code"> 
-        <img src='img/qr.jpg' alt="QR Code">
+        <img src='img/qr.JPG' alt="QR Code">
     </div>
     <div class="twitter">
         <a href="https://twitter.com/RobertFoley_" class="profile-link" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
